feat: tambahkan modul autentikasi dan dashboard

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   </head>
   <body>
     <div id="app"></div>
+    <!-- src diawali slash, merujuk ke /src/main.js dari root -->
     <script type="module" src="/src/main.js"></script>
   </body>
 </html>
