fix: perbaiki tampilan halaman login dan dashboard

--- a/index.html
+++ b/index.html
@@ -2,8 +2,12 @@
 <html lang="id">
   <head>
     <meta charset="UTF-8" />
-    <title>Aplikasi Kasir</title>
-  </head>
+    <title>Aplikasi Kasir</title>  
+    <!-- Tabler CSS -->
+    <link rel="stylesheet" href="/vendor/tabler/css/tabler.min.css" />
+    <!-- Bootstrap Icons -->
+    <link rel="stylesheet" href="/vendor/bootstrap-icons/css/bootstrap-icons.css" />
+    </head>
   <body>
     <div id="app"></div>
     <!-- src diawali slash, merujuk ke /src/main.js dari root -->
